--- a/MyCounterApp2/MyCounterApp2.entitlements
+++ b/MyCounterApp2/MyCounterApp2.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.sunyuan.MyCounterApp2</string>
+		<string>group.com.sunyuan.counter</string>
 	</array>
 </dict>
 </plist>
